added object content to DOM, adjusted CSS

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <p>
         2020 was a bit of a dumpster fire, so let's have fun saying good-bye to
         it by comparing our zodiacs to some of the things that punctuated 2020!
+        <br />
+        Select your birth month and day to reveal your special 2020 horoscope.
       </p>
     </header>
     <div class="dropdown-container">
@@ -59,8 +61,13 @@
       <button id="showZodiacBtn">What's my sign?</button>
     </div>
     <h2 id="populateZodiacSign"></h2>
-    <div id="horoscopeImg"></div>
-    <div id="populateHoroscopeDescription"></div>
+    <div id="showHoroscope">
+      <div id="horoscopeImg" class="horoscopeImg">
+        <img hidden />
+      </div>
+      <div id="populateHoroscopeDescription"></div>
+    </div>
+
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
