added media queries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="This is where your description goes" />
     <meta name="keywords" content="one, two, three" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>End of 2020 Horoscope Generator</title>
 
