fixed media queries

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <h2 id="populateZodiacSign"></h2>
     <div id="showHoroscope">
-      <div id="horoscopeImg" class="horoscopeImg">
+      <div id="horoscopeImgContainer">
         <img hidden />
       </div>
       <div id="populateHoroscopeDescription"></div>
